# EasyBricks

./: .gitignore  CMakeLists.txt  README.md
config/: config.yaml
config/player/: blhx.yaml  test.yaml  txbm.yaml
docker/paddleocr/: Dockerfile.gpu
example/android/: README.md
example/android/EasyBricks/: settings.gradle
example/android/EasyBricks/app/: build.gradle
example/android/EasyBricks/app/src/main/: AndroidManifest.xml
example/android/EasyBricks/app/src/main/assets/: config.yaml  player
example/android/EasyBricks/app/src/main/java/EasyBricks/: EasyBricks.java  PlayOperation.java
example/android/EasyBricks/app/src/main/java/com/example/easybricks/: AssetCopy.java  GestureService.java  GlobalData.java  MainActivity.java  ScreenCaptureService.java
example/android/EasyBricks/app/src/main/res/layout/: activity_main.xml
example/android/EasyBricks/app/src/main/res/xml/: accessibility.xml
example/android/EasyBricks/app/src/test/java/com/example/easybricks/: ExampleUnitTest.java
example/android/EasyBricks/gradle/wrapper/: gradle-wrapper.properties
example/android/app/: build.gradle
example/android/app/src/androidTest/java/com/example/easybricks/: ExampleInstrumentedTest.java
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/example/easybricks/: GestureService.java  GlobalData.java  MainActivity.java  ScreenCaptureService.java
example/android/app/src/main/res/layout/: activity_main.xml
example/android/app/src/main/res/values/: strings.xml  themes.xml
example/android/app/src/main/res/values-night/: themes.xml
example/android/jni/: EasyBricks.java  EasyBricks_EasyBricks.cpp  PlayOperation.java
example/linux/: main.cpp  x11_event.cpp  x11_event.h  x11_screencap.cpp  x11_screencap.h
source/common/: common.h  log.h
source/detect/: detect.h
source/facade/: game_system.cpp  game_system.h
source/ocr/: ocr.h  paddle_ocr.cpp  paddle_ocr.h
source/player/: blhx_player.cpp  blhx_player.h  common_player.cpp  common_player.h  player.h
source/utils/: util_functions.cpp  util_functions.h
tools/: fetch_ocr.sh  paddleocr.py
